--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-gio = "^0.3.0"
-gtk = "0.16.0"
+cpal = "0.13.5"
+clarus-wav = { path = "./crates/wav" }
+clarus-utils = { path = "./crates/utils" }
+rodio = "0.15.0"
